# folio

./: LICENSE.md  README.md  package.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  errors.rs  index.rs  lib.rs  media.rs  search.rs  subtitles.rs  transcribe.rs
src/lib/stores/: indexing.ts  settings.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/results/: +page.svelte
src/routes/settings/: +page.svelte
