[package]
name = "folio"
version = "0.2.0"
description = "Makes every frame searchable."
authors = ["Aditya Chaturvedi <aditya.chaturvedi1608@gmail.com>"]
license = "GPL-3.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = false
strip = true

[lib]
name = "folio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
encoding_rs = "0.8.35"
ffmpeg-next = "8.0.0"
rayon = "1.11.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tantivy = "0.25.0"
thiserror = "2.0.18"
ureq = "3.2.0"
walkdir = "2.5.0"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
tauri-plugin-dialog = "2.6.0"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = "0.15.1"

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
whisper-rs = { version = "0.15.1", features = ["vulkan"] }
